# frappe_vault

./: .gitignore  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  README.md  package.json  pyproject.toml
.github/helper/: install.sh  site_config.json
.github/workflows/: backport.yml  code-duplication.yml  generate-changelog.yml  lint.yaml  overrides.yaml  pytest.yaml  pytest.yml  release.yaml
docs/: configuration.md  development.md  frappe-cloud.md  index.md  openbao-setup.md  production.md  ubuntu-vps.md
frappe_vault/: __init__.py  commands.py  hooks.py  install.py  utils.py  vault_api_renderer.py  vault_client.py  vault_proxy.py  vault_sync.py
frappe_vault/config/: desktop.py  docs.py
frappe_vault/frappe_vault/: __init__.py
frappe_vault/frappe_vault/doctype/vault_secret/: vault_secret.js  vault_secret.json  vault_secret.py  vault_secret_list.js
frappe_vault/public/js/: frappe_vault.bundle.js  password.js
frappe_vault/tests/: conftest.py  fixtures.py  setup.py  test_integration.py  test_migration.py  test_utils.py  test_v1_http.py  test_vault_proxy.py  test_vault_secret.py  test_vault_secret_permissions.py  test_vault_sync.py
frappe_vault/tests/ui/: conftest.py  test_list_view.py
frappe_vault/www/: v1.html  v1.py  vault-unavailable.html
