[project]
name = "frappe_vault"
authors = [
    { name = "AgriTheory", email = "support@agritheory.dev"}
]
description = "OpenBao integration for Frappe"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]
version = "15.0.0"

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"

[tool.poetry.dependencies]
python = "^3.10"
hvac = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-cov = "^5.0.0"
types-requests = "^2.31.0"

[tool.codespell]
skip = "CHANGELOG.md"

[tool.pytest.ini_options]
addopts = "--cov=frappe_vault --cov-report term-missing"

[tool.black]
line-length = 99

[tool.isort]
line_length = 99
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
indent = "\t"

[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version"]
version_variable = [
    "frappe_vault/__init__.py:__version__"
]

[tool.semantic_release.branches.version]
match = "version-15"
