[project]
name = "frappe_vault"
version = "15.3.1"
description = "OpenBao integration for Frappe"
requires-python = ">=3.14,<3.15"
readme = "README.md"
dependencies = [ "hvac>=2.1.0",]
[[project.authors]]
name = "AgriTheory"
email = "support@agritheory.dev"

[build-system]
requires = [ "flit_core>=3.2,<4",]
build-backend = "flit_core.buildapi"

[tool.codespell]
skip = "CHANGELOG.md"

[tool.semantic_release]
version_toml = [ "pyproject.toml:project.version",]
version_variables = [ "frappe_vault/__init__.py:__version__",]
build_command = "echo 1"

[tool.black]
line-length = 99

[tool.isort]
line_length = 99
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
indent = "\t"

[tool.bench.frappe-dependencies]
frappe = ">=16.0.0-dev,<17.0.0"

[tool.bench.dev-dependencies]
pytest = "~=8.2.2"
pytest-cov = "~=5.0.0"
pytest-order = "~=1.3.0"
types-requests = "~=2.31.0"

[tool.pytest.ini_options]
addopts = "-s --disable-warnings"

[tool.semantic_release.branches.version]
match = "version-15"
